@@ -1,4 +1,5 @@
 #!@PERL@ -w
+# -*- cperl -*-
 #
 # gtk-doc - GTK DocBook documentation generator.
 # Copyright (C) 1998  Damon Chaplin
@@ -806,7 +807,10 @@ sub ReadDeclarationsFile {
 	} else {
 	    if (m%^<NAME>(.*)</NAME>%) {
 		$declaration_name = $1;
-	    } elsif (m%^</$declaration_type>%) {
+	    } elsif (m%<DEPRECATED/>%) {
+                # do nothing, just skip the line; we handle this
+                # in mkdb
+            } elsif (m%^</$declaration_type>%) {
 #		print "Found end of declaration: $declaration_name\n";
 		# Check that the declaration has a name
 		if ($declaration_name eq "") {
