@@ -1,3 +1,10 @@
+2001-01-30  Havoc Pennington  <hp@pobox.com>
+
+	* gtkdoc-fixxref.in, gtkdoc-mkdb.in, gtkdoc-mktmpl.in,
+	gtkdoc-scan.in, gtkdoc-scangobj.in, gtkdoc-scanobj.in:	
+	Added -*- cperl -*- magic, and --deprecated-guards
+	option.
+
 2001-01-23  Damon Chaplin  <damon@helixcode.com>
 
 	* gtkdoc-scangobj.in: 
